Melhorando a experiência do usuário

--- a/Angular01/alurapic/src/app/errors/not-found/not-found.component.html
+++ b/Angular01/alurapic/src/app/errors/not-found/not-found.component.html
@@ -4,4 +4,7 @@
       The link you have acccessed may be broken or
       the page may have ben removed.
   </p>
+  <p>
+    <img src="https://sayingimages.com/wp-content/uploads/kevin-hart-wait-who-are-you-meme.jpg" alt="Who">
+  </p>
 </div>
